# entity3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
include/: monitor.h  node.h  render_context.h  root_node.h  shader_program.h  timing.h  window.h
include/geometry/: geometry_node.h  triangle_node.h
include/physics/: physics_node.h
scripts/: README.md  build.sh  clean-all.sh  clean.sh  install.sh
src/: main.cpp  monitor.cpp  node.cpp  render_context.cpp  root_node.cpp  shader_program.cpp  timing.cpp  window.cpp
src/geometry/: geometry_node.cpp  triangle_node.cpp
src/physics/: physics_node.cpp
